vendor/bicycl-rs-sys/capi/include/bicycl_capi.h

typedef enum bicycl_status_t {
  BICYCL_OK = 0,
  BICYCL_ERR_NULL_PTR = 1,
  BICYCL_ERR_INVALID_ARGUMENT = 2,
  BICYCL_ERR_ALLOCATION_FAILED = 3,
  BICYCL_ERR_INTERNAL = 4,
  BICYCL_ERR_BUFFER_TOO_SMALL = 5,
  BICYCL_ERR_PARSE = 6,
  BICYCL_ERR_INVALID_STATE = 7,
  BICYCL_ERR_VERIFY_FAILED = 8,
  BICYCL_ERR_PROTOCOL_ABORT = 9,
  BICYCL_ERR_CORE = 90,
  BICYCL_ERR_PAILLIER = 100,
  BICYCL_ERR_JOYE_LIBERT = 101,
  BICYCL_ERR_CL_HSMQK = 102,
  BICYCL_ERR_CL_HSM2K = 103,
  BICYCL_ERR_ECDSA = 104,
  BICYCL_ERR_TWO_PARTY_ECDSA = 105,
  BICYCL_ERR_CL_THRESHOLD = 106,
  BICYCL_ERR_CL_DLOG = 107,
  BICYCL_ERR_THRESHOLD_ECDSA = 108,
} bicycl_status_t;
typedef struct bicycl_context_t bicycl_context_t;
typedef struct bicycl_randgen_t bicycl_randgen_t;
typedef struct bicycl_classgroup_t bicycl_classgroup_t;
typedef struct bicycl_qfi_t bicycl_qfi_t;
typedef struct bicycl_paillier_t bicycl_paillier_t;
typedef struct bicycl_paillier_sk_t bicycl_paillier_sk_t;
typedef struct bicycl_paillier_pk_t bicycl_paillier_pk_t;
typedef struct bicycl_paillier_ct_t bicycl_paillier_ct_t;
typedef struct bicycl_joye_libert_t bicycl_joye_libert_t;
typedef struct bicycl_joye_libert_sk_t bicycl_joye_libert_sk_t;
typedef struct bicycl_joye_libert_pk_t bicycl_joye_libert_pk_t;
typedef struct bicycl_joye_libert_ct_t bicycl_joye_libert_ct_t;
typedef struct bicycl_cl_hsmqk_t bicycl_cl_hsmqk_t;
typedef struct bicycl_cl_hsmqk_sk_t bicycl_cl_hsmqk_sk_t;
typedef struct bicycl_cl_hsmqk_pk_t bicycl_cl_hsmqk_pk_t;
typedef struct bicycl_cl_hsmqk_ct_t bicycl_cl_hsmqk_ct_t;
typedef struct bicycl_cl_hsm2k_t bicycl_cl_hsm2k_t;
typedef struct bicycl_cl_hsm2k_sk_t bicycl_cl_hsm2k_sk_t;
typedef struct bicycl_cl_hsm2k_pk_t bicycl_cl_hsm2k_pk_t;
typedef struct bicycl_cl_hsm2k_ct_t bicycl_cl_hsm2k_ct_t;
bicycl_status_t bicycl_cl_hsmqk_sk_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_sk_t *sk, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_sk_new_from_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl,
    const char *sk_decimal, bicycl_cl_hsmqk_sk_t **out);
bicycl_status_t bicycl_cl_hsmqk_encrypt_decimal_with_r(
    bicycl_context_t *ctx, const bicycl_cl_hsmqk_t *cl,
    const bicycl_cl_hsmqk_pk_t *pk, const char *message_decimal,
    const char *r_decimal, bicycl_cl_hsmqk_ct_t **out_ct);
// ── CL_HSM2k parameters ──────────────────────────────────────────────────
bicycl_status_t bicycl_cl_hsm2k_N_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsm2k_M_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsm2k_DeltaK_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsm2k_Delta_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsm2k_secretkey_bound_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsm2k_Cl_DeltaK(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, bicycl_classgroup_t **out);
bicycl_status_t bicycl_cl_hsm2k_Cl_Delta(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, bicycl_classgroup_t **out);
bicycl_status_t bicycl_cl_hsm2k_h(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsm2k_power_of_h_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl,
    const char *e_decimal, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsm2k_power_of_f_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl,
    const char *m_decimal, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsm2k_dlog_in_F(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl,
    const bicycl_qfi_t *fm, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsm2k_from_Cl_DeltaK_to_Cl_Delta(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl, bicycl_qfi_t *f);
bicycl_status_t bicycl_cl_hsm2k_pk_elt(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_pk_t *pk, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsm2k_pk_new_from_qfi(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl,
    const bicycl_qfi_t *qfi, bicycl_cl_hsm2k_pk_t **out);
bicycl_status_t bicycl_cl_hsm2k_ct_c1(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_ct_t *ct, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsm2k_ct_c2(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_ct_t *ct, bicycl_qfi_t **out);
bicycl_status_t bicycl_cl_hsm2k_ct_new_from_c1c2(
    bicycl_context_t *ctx, const bicycl_qfi_t *c1, const bicycl_qfi_t *c2,
    bicycl_cl_hsm2k_ct_t **out);
bicycl_status_t bicycl_cl_hsm2k_sk_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_sk_t *sk, char *out_buf, size_t *inout_len);
bicycl_status_t bicycl_cl_hsm2k_sk_new_from_decimal(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl,
    const char *sk_decimal, bicycl_cl_hsm2k_sk_t **out);
bicycl_status_t bicycl_cl_hsm2k_encrypt_decimal_with_r(
    bicycl_context_t *ctx, const bicycl_cl_hsm2k_t *cl,
    const bicycl_cl_hsm2k_pk_t *pk, const char *message_decimal,
    const char *r_decimal, bicycl_cl_hsm2k_ct_t **out_ct);
bicycl_status_t bicycl_paillier_new(
    bicycl_context_t *ctx,
    uint32_t modulus_bits,
    bicycl_paillier_t **out_paillier);
void bicycl_paillier_free(bicycl_paillier_t *paillier);
bicycl_status_t bicycl_paillier_keygen(
    bicycl_context_t *ctx,
    const bicycl_paillier_t *paillier,
    bicycl_randgen_t *randgen,
    bicycl_paillier_sk_t **out_sk,
    bicycl_paillier_pk_t **out_pk);
void bicycl_paillier_sk_free(bicycl_paillier_sk_t *sk);
void bicycl_paillier_pk_free(bicycl_paillier_pk_t *pk);
void bicycl_paillier_ct_free(bicycl_paillier_ct_t *ct);
bicycl_status_t bicycl_paillier_encrypt_decimal(
    bicycl_context_t *ctx,
    const bicycl_paillier_t *paillier,
    const bicycl_paillier_pk_t *pk,
    bicycl_randgen_t *randgen,
    const char *message_decimal,
    bicycl_paillier_ct_t **out_ct);
bicycl_status_t bicycl_paillier_decrypt_decimal(
    bicycl_context_t *ctx,
    const bicycl_paillier_t *paillier,
    const bicycl_paillier_pk_t *pk,
    const bicycl_paillier_sk_t *sk,
    const bicycl_paillier_ct_t *ct,
    char *out_buf,
    size_t *inout_len);
bicycl_status_t bicycl_joye_libert_new(
    bicycl_context_t *ctx,
    uint32_t modulus_bits,
    uint32_t k,
    bicycl_joye_libert_t **out_joye_libert);
void bicycl_joye_libert_free(bicycl_joye_libert_t *joye_libert);
bicycl_status_t bicycl_joye_libert_keygen(
    bicycl_context_t *ctx,
    const bicycl_joye_libert_t *joye_libert,
    bicycl_randgen_t *randgen,
    bicycl_joye_libert_sk_t **out_sk,
    bicycl_joye_libert_pk_t **out_pk);
void bicycl_joye_libert_sk_free(bicycl_joye_libert_sk_t *sk);
void bicycl_joye_libert_pk_free(bicycl_joye_libert_pk_t *pk);
void bicycl_joye_libert_ct_free(bicycl_joye_libert_ct_t *ct);
bicycl_status_t bicycl_joye_libert_encrypt_decimal(
    bicycl_context_t *ctx,
    const bicycl_joye_libert_t *joye_libert,
    const bicycl_joye_libert_pk_t *pk,
    bicycl_randgen_t *randgen,
    const char *message_decimal,
    bicycl_joye_libert_ct_t **out_ct);
bicycl_status_t bicycl_joye_libert_decrypt_decimal(
    bicycl_context_t *ctx,
    const bicycl_joye_libert_t *joye_libert,
    const bicycl_joye_libert_sk_t *sk,
    const bicycl_joye_libert_ct_t *ct,
    char *out_buf,
    size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_new(
    bicycl_context_t *ctx,
    const char *q_decimal,
    uint32_t k,
    const char *p_decimal,
    bicycl_cl_hsmqk_t **out_cl);
void bicycl_cl_hsmqk_free(bicycl_cl_hsmqk_t *cl);
bicycl_status_t bicycl_cl_hsmqk_keygen(
    bicycl_context_t *ctx,
    const bicycl_cl_hsmqk_t *cl,
    bicycl_randgen_t *randgen,
    bicycl_cl_hsmqk_sk_t **out_sk,
    bicycl_cl_hsmqk_pk_t **out_pk);
void bicycl_cl_hsmqk_sk_free(bicycl_cl_hsmqk_sk_t *sk);
void bicycl_cl_hsmqk_pk_free(bicycl_cl_hsmqk_pk_t *pk);
void bicycl_cl_hsmqk_ct_free(bicycl_cl_hsmqk_ct_t *ct);
bicycl_status_t bicycl_cl_hsmqk_encrypt_decimal(
    bicycl_context_t *ctx,
    const bicycl_cl_hsmqk_t *cl,
    const bicycl_cl_hsmqk_pk_t *pk,
    bicycl_randgen_t *randgen,
    const char *message_decimal,
    bicycl_cl_hsmqk_ct_t **out_ct);
bicycl_status_t bicycl_cl_hsmqk_decrypt_decimal(
    bicycl_context_t *ctx,
    const bicycl_cl_hsmqk_t *cl,
    const bicycl_cl_hsmqk_sk_t *sk,
    const bicycl_cl_hsmqk_ct_t *ct,
    char *out_buf,
    size_t *inout_len);
bicycl_status_t bicycl_cl_hsmqk_add_ciphertexts(
    bicycl_context_t *ctx,
    const bicycl_cl_hsmqk_t *cl,
    const bicycl_cl_hsmqk_pk_t *pk,
    bicycl_randgen_t *randgen,
    const bicycl_cl_hsmqk_ct_t *ca,
    const bicycl_cl_hsmqk_ct_t *cb,
    bicycl_cl_hsmqk_ct_t **out_ct);
bicycl_status_t bicycl_cl_hsmqk_scal_ciphertext_decimal(
    bicycl_context_t *ctx,
    const bicycl_cl_hsmqk_t *cl,
    const bicycl_cl_hsmqk_pk_t *pk,
    bicycl_randgen_t *randgen,
    const bicycl_cl_hsmqk_ct_t *ct,
    const char *scalar_decimal,
    bicycl_cl_hsmqk_ct_t **out_ct);
bicycl_status_t bicycl_cl_hsmqk_addscal_ciphertexts_decimal(
    bicycl_context_t *ctx,
    const bicycl_cl_hsmqk_t *cl,
    const bicycl_cl_hsmqk_pk_t *pk,
    bicycl_randgen_t *randgen,
    const bicycl_cl_hsmqk_ct_t *ca,
    const bicycl_cl_hsmqk_ct_t *cb,
    const char *scalar_decimal,
    bicycl_cl_hsmqk_ct_t **out_ct);
bicycl_status_t bicycl_cl_hsm2k_new(
    bicycl_context_t *ctx,
    const char *N_decimal,
    uint32_t k,
    bicycl_cl_hsm2k_t **out_cl);
void bicycl_cl_hsm2k_free(bicycl_cl_hsm2k_t *cl);
bicycl_status_t bicycl_cl_hsm2k_keygen(
    bicycl_context_t *ctx,
    const bicycl_cl_hsm2k_t *cl,
    bicycl_randgen_t *randgen,
    bicycl_cl_hsm2k_sk_t **out_sk,
    bicycl_cl_hsm2k_pk_t **out_pk);
void bicycl_cl_hsm2k_sk_free(bicycl_cl_hsm2k_sk_t *sk);
void bicycl_cl_hsm2k_pk_free(bicycl_cl_hsm2k_pk_t *pk);
void bicycl_cl_hsm2k_ct_free(bicycl_cl_hsm2k_ct_t *ct);
bicycl_status_t bicycl_cl_hsm2k_encrypt_decimal(
    bicycl_context_t *ctx,
    const bicycl_cl_hsm2k_t *cl,
    const bicycl_cl_hsm2k_pk_t *pk,
    bicycl_randgen_t *randgen,
    const char *message_decimal,
    bicycl_cl_hsm2k_ct_t **out_ct);
bicycl_status_t bicycl_cl_hsm2k_decrypt_decimal(
    bicycl_context_t *ctx,
    const bicycl_cl_hsm2k_t *cl,
    const bicycl_cl_hsm2k_sk_t *sk,
    const bicycl_cl_hsm2k_ct_t *ct,
    char *out_buf,
    size_t *inout_len);
bicycl_status_t bicycl_cl_hsm2k_add_ciphertexts(
    bicycl_context_t *ctx,
    const bicycl_cl_hsm2k_t *cl,
    const bicycl_cl_hsm2k_pk_t *pk,
    bicycl_randgen_t *randgen,
    const bicycl_cl_hsm2k_ct_t *ca,
    const bicycl_cl_hsm2k_ct_t *cb,
    bicycl_cl_hsm2k_ct_t **out_ct);