vendor/bicycl-rs-sys/src/lib.rs


    pub fn bicycl_cl_hsmqk_sk_decimal(
        ctx: *mut bicycl_context_t,
        sk: *const bicycl_cl_hsmqk_sk_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_sk_new_from_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        sk_decimal: *const c_char,
        out: *mut *mut bicycl_cl_hsmqk_sk_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_encrypt_decimal_with_r(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        pk: *const bicycl_cl_hsmqk_pk_t,
        message_decimal: *const c_char,
        r_decimal: *const c_char,
        out_ct: *mut *mut bicycl_cl_hsmqk_ct_t,
    ) -> bicycl_status_t;

    // ── CL_HSM2k parameters ──────────────────────────────────────────────────
    pub fn bicycl_cl_hsm2k_N_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_M_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_DeltaK_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_Delta_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_secretkey_bound_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_Cl_DeltaK(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        out: *mut *mut bicycl_classgroup_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_Cl_Delta(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        out: *mut *mut bicycl_classgroup_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_h(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_power_of_h_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        e_decimal: *const c_char,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_power_of_f_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        m_decimal: *const c_char,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_dlog_in_F(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        fm: *const bicycl_qfi_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_from_Cl_DeltaK_to_Cl_Delta(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        f: *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_pk_elt(
        ctx: *mut bicycl_context_t,
        pk: *const bicycl_cl_hsm2k_pk_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_pk_new_from_qfi(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        qfi: *const bicycl_qfi_t,
        out: *mut *mut bicycl_cl_hsm2k_pk_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_ct_c1(
        ctx: *mut bicycl_context_t,
        ct: *const bicycl_cl_hsm2k_ct_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_ct_c2(
        ctx: *mut bicycl_context_t,
        ct: *const bicycl_cl_hsm2k_ct_t,
        out: *mut *mut bicycl_qfi_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_ct_new_from_c1c2(
        ctx: *mut bicycl_context_t,
        c1: *const bicycl_qfi_t,
        c2: *const bicycl_qfi_t,
        out: *mut *mut bicycl_cl_hsm2k_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_sk_decimal(
        ctx: *mut bicycl_context_t,
        sk: *const bicycl_cl_hsm2k_sk_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_sk_new_from_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        sk_decimal: *const c_char,
        out: *mut *mut bicycl_cl_hsm2k_sk_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_encrypt_decimal_with_r(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        pk: *const bicycl_cl_hsm2k_pk_t,
        message_decimal: *const c_char,
        r_decimal: *const c_char,
        out_ct: *mut *mut bicycl_cl_hsm2k_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_paillier_new(
        ctx: *mut bicycl_context_t,
        modulus_bits: u32,
        out_paillier: *mut *mut bicycl_paillier_t,
    ) -> bicycl_status_t;
    pub fn bicycl_paillier_free(paillier: *mut bicycl_paillier_t);

    pub fn bicycl_paillier_keygen(
        ctx: *mut bicycl_context_t,
        paillier: *const bicycl_paillier_t,
        randgen: *mut bicycl_randgen_t,
        out_sk: *mut *mut bicycl_paillier_sk_t,
        out_pk: *mut *mut bicycl_paillier_pk_t,
    ) -> bicycl_status_t;

    pub fn bicycl_paillier_sk_free(sk: *mut bicycl_paillier_sk_t);
    pub fn bicycl_paillier_pk_free(pk: *mut bicycl_paillier_pk_t);
    pub fn bicycl_paillier_ct_free(ct: *mut bicycl_paillier_ct_t);

    pub fn bicycl_paillier_encrypt_decimal(
        ctx: *mut bicycl_context_t,
        paillier: *const bicycl_paillier_t,
        pk: *const bicycl_paillier_pk_t,
        randgen: *mut bicycl_randgen_t,
        message_decimal: *const c_char,
        out_ct: *mut *mut bicycl_paillier_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_paillier_decrypt_decimal(
        ctx: *mut bicycl_context_t,
        paillier: *const bicycl_paillier_t,
        pk: *const bicycl_paillier_pk_t,
        sk: *const bicycl_paillier_sk_t,
        ct: *const bicycl_paillier_ct_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_joye_libert_new(
        ctx: *mut bicycl_context_t,
        modulus_bits: u32,
        k: u32,
        out_joye_libert: *mut *mut bicycl_joye_libert_t,
    ) -> bicycl_status_t;
    pub fn bicycl_joye_libert_free(joye_libert: *mut bicycl_joye_libert_t);

    pub fn bicycl_joye_libert_keygen(
        ctx: *mut bicycl_context_t,
        joye_libert: *const bicycl_joye_libert_t,
        randgen: *mut bicycl_randgen_t,
        out_sk: *mut *mut bicycl_joye_libert_sk_t,
        out_pk: *mut *mut bicycl_joye_libert_pk_t,
    ) -> bicycl_status_t;

    pub fn bicycl_joye_libert_sk_free(sk: *mut bicycl_joye_libert_sk_t);
    pub fn bicycl_joye_libert_pk_free(pk: *mut bicycl_joye_libert_pk_t);
    pub fn bicycl_joye_libert_ct_free(ct: *mut bicycl_joye_libert_ct_t);

    pub fn bicycl_joye_libert_encrypt_decimal(
        ctx: *mut bicycl_context_t,
        joye_libert: *const bicycl_joye_libert_t,
        pk: *const bicycl_joye_libert_pk_t,
        randgen: *mut bicycl_randgen_t,
        message_decimal: *const c_char,
        out_ct: *mut *mut bicycl_joye_libert_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_joye_libert_decrypt_decimal(
        ctx: *mut bicycl_context_t,
        joye_libert: *const bicycl_joye_libert_t,
        sk: *const bicycl_joye_libert_sk_t,
        ct: *const bicycl_joye_libert_ct_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_new(
        ctx: *mut bicycl_context_t,
        q_decimal: *const c_char,
        k: u32,
        p_decimal: *const c_char,
        out_cl: *mut *mut bicycl_cl_hsmqk_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_hsmqk_free(cl: *mut bicycl_cl_hsmqk_t);

    pub fn bicycl_cl_hsmqk_keygen(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        randgen: *mut bicycl_randgen_t,
        out_sk: *mut *mut bicycl_cl_hsmqk_sk_t,
        out_pk: *mut *mut bicycl_cl_hsmqk_pk_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_sk_free(sk: *mut bicycl_cl_hsmqk_sk_t);
    pub fn bicycl_cl_hsmqk_pk_free(pk: *mut bicycl_cl_hsmqk_pk_t);
    pub fn bicycl_cl_hsmqk_ct_free(ct: *mut bicycl_cl_hsmqk_ct_t);

    pub fn bicycl_cl_hsmqk_encrypt_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        pk: *const bicycl_cl_hsmqk_pk_t,
        randgen: *mut bicycl_randgen_t,
        message_decimal: *const c_char,
        out_ct: *mut *mut bicycl_cl_hsmqk_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_decrypt_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        sk: *const bicycl_cl_hsmqk_sk_t,
        ct: *const bicycl_cl_hsmqk_ct_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_add_ciphertexts(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        pk: *const bicycl_cl_hsmqk_pk_t,
        randgen: *mut bicycl_randgen_t,
        ca: *const bicycl_cl_hsmqk_ct_t,
        cb: *const bicycl_cl_hsmqk_ct_t,
        out_ct: *mut *mut bicycl_cl_hsmqk_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_scal_ciphertext_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        pk: *const bicycl_cl_hsmqk_pk_t,
        randgen: *mut bicycl_randgen_t,
        ct: *const bicycl_cl_hsmqk_ct_t,
        scalar_decimal: *const c_char,
        out_ct: *mut *mut bicycl_cl_hsmqk_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsmqk_addscal_ciphertexts_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsmqk_t,
        pk: *const bicycl_cl_hsmqk_pk_t,
        randgen: *mut bicycl_randgen_t,
        ca: *const bicycl_cl_hsmqk_ct_t,
        cb: *const bicycl_cl_hsmqk_ct_t,
        scalar_decimal: *const c_char,
        out_ct: *mut *mut bicycl_cl_hsmqk_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_new(
        ctx: *mut bicycl_context_t,
        n_decimal: *const c_char,
        k: u32,
        out_cl: *mut *mut bicycl_cl_hsm2k_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_hsm2k_free(cl: *mut bicycl_cl_hsm2k_t);

    pub fn bicycl_cl_hsm2k_keygen(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        randgen: *mut bicycl_randgen_t,
        out_sk: *mut *mut bicycl_cl_hsm2k_sk_t,
        out_pk: *mut *mut bicycl_cl_hsm2k_pk_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_sk_free(sk: *mut bicycl_cl_hsm2k_sk_t);
    pub fn bicycl_cl_hsm2k_pk_free(pk: *mut bicycl_cl_hsm2k_pk_t);
    pub fn bicycl_cl_hsm2k_ct_free(ct: *mut bicycl_cl_hsm2k_ct_t);

    pub fn bicycl_cl_hsm2k_encrypt_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        pk: *const bicycl_cl_hsm2k_pk_t,
        randgen: *mut bicycl_randgen_t,
        message_decimal: *const c_char,
        out_ct: *mut *mut bicycl_cl_hsm2k_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_decrypt_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        sk: *const bicycl_cl_hsm2k_sk_t,
        ct: *const bicycl_cl_hsm2k_ct_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_add_ciphertexts(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        pk: *const bicycl_cl_hsm2k_pk_t,
        randgen: *mut bicycl_randgen_t,
        ca: *const bicycl_cl_hsm2k_ct_t,
        cb: *const bicycl_cl_hsm2k_ct_t,
        out_ct: *mut *mut bicycl_cl_hsm2k_ct_t,
    ) -> bicycl_status_t;
